# envsentry

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml  publish.yml
src/: diagnostics.rs  env_file_reader.rs  lib.rs  main.rs  src_file_reader.rs
tests/: run_integration.rs  run_performance.rs
tests/src/: main.rs
tests/test-files/src/: main.rs
tests/test_files/: .env
tests/test_files/src/: lib.rs
