[package]
name = "envsentry"
version = "0.1.0"
edition = "2024"
description = "CLI tool for finding missing and unused environment variables in Rust projects"
license = "MIT"
readme = "README.md"
repository = "https://github.com/yourusername/envsentry"
keywords = ["cli", "env", "dotenv", "rust", "audit"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"